# fed

./: ALPHA_VERSION_NOTES  install
authors/: example1.php  example2.php
docs/: license.txt
docs/notes/: README.old  ansi_sequences_vt100_codes.txt  ncurses_keysequences.txt  old_design_doc.txt
lang/: cpp.txt  css.txt  h.txt  htm.txt  index.txt  java.txt  js.txt  php.txt
sandbox/: test.php
src/: .fed  Makefile.linux  a_really_long_filename_much_longer_than_forty_characters.txt  b64.c  b64.h  cli.c  cli.h  clipboard.c  clipboard.h  color.h  config.c  config.h  configure  configure.in  dashboard.c  dashboard.h  display.c  display.h  edit.c  edit.h  errors.c  errors.h  fed.h  gbuffer.c  gbuffer.h  graphics.c  graphics.h  help.c  help.h  input.c  input.h  io.c  io.h  keytest  keytest_ctrl.txt  keytester.c  lang.c  lang.c.save  lang.h  main.c  (+15 more)
src/autom4te.cache/: output.0  requests  traces.0
src/nvaders/: FED_AUTHOR_NOTES.txt  Makefile  nInvaders  nInvaders.c  nInvaders.h
